--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
     font-size: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /*align-items: center;*/
     background-color: lightgray;
 }
 h1, h2 {color: #bf5864;}
